--- a/src/Cards/MainForm.form
+++ b/src/Cards/MainForm.form
@@ -1,57 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Cards.MainForm">
-  <grid id="27dc6" binding="mainContainer" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainContainer" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
       <xy x="11" y="20" width="800" height="600"/>
     </constraints>
     <properties>
-      <font name="Roboto" style="0"/>
+      <background color="-1120043"/>
+      <font/>
+      <inheritsPopupMenu value="true"/>
       <minimumSize width="800" height="600"/>
       <preferredSize width="800" height="600"/>
     </properties>
-    <border type="etched"/>
+    <border type="bevel-raised"/>
     <children>
-      <grid id="f8662" binding="topCardPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <component id="7f034" class="javax.swing.JLabel" binding="topCardText">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Label"/>
-            </properties>
-          </component>
-        </children>
-      </grid>
-      <grid id="61be0" binding="bottomCardPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <component id="199de" class="javax.swing.JLabel" binding="bottomCardText">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Label"/>
-            </properties>
-          </component>
-        </children>
-      </grid>
-      <grid id="9859d" binding="gamePanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="9859d" binding="gamePanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="10" left="10" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="true"/>
+          <grid row="0" column="0" row-span="4" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="true">
+            <minimum-size width="500" height="-1"/>
+            <preferred-size width="500" height="144"/>
+          </grid>
         </constraints>
         <properties>
           <autoscrolls value="true"/>
@@ -59,35 +28,124 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="bdd1e" class="javax.swing.JLabel" binding="gameTitle">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <font name="Daniel Black" size="22" style="0"/>
-              <text value="Card Game!"/>
-            </properties>
-          </component>
           <component id="eb550" class="javax.swing.JButton" binding="nextRound">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Next round"/>
+              <font name="Roboto" style="0"/>
+              <text value="Następna runda"/>
               <verticalAlignment value="0"/>
             </properties>
           </component>
-          <component id="d2628" class="javax.swing.JLabel" binding="gameAreaText">
+          <component id="71bb8" class="javax.swing.JTextPane" binding="gameAreaText">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <minimum-size width="150" height="50"/>
+                <preferred-size width="150" height="50"/>
+              </grid>
             </constraints>
             <properties>
-              <font name="Roboto" size="18" style="0"/>
-              <text value="Label"/>
+              <background color="-1120043"/>
+              <editable value="false"/>
+              <font name="Roboto" size="16"/>
+              <opaque value="false"/>
+            </properties>
+          </component>
+          <component id="bdd1e" class="javax.swing.JLabel" binding="gameTitle">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Daniel Black" size="22" style="0"/>
+              <foreground color="-12828863"/>
+              <text value="Card Game!"/>
+            </properties>
+          </component>
+          <component id="fab8f" class="javax.swing.JButton" binding="exitButton">
+            <constraints>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="6" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="146" height="30"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-5931"/>
+              <font name="Roboto" style="0"/>
+              <label value="Wyjście"/>
+              <text value="Wyjście"/>
+            </properties>
+          </component>
+          <component id="44a92" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Daniel" size="22" style="1"/>
+              <foreground color="-15183593"/>
+              <text value="Runda 1"/>
             </properties>
           </component>
         </children>
       </grid>
+      <component id="225e" class="javax.swing.JTextPane" binding="topCardText">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-1120043"/>
+          <font name="OpenDyslexic" size="36"/>
+          <foreground color="-12828863"/>
+        </properties>
+      </component>
+      <component id="6f773" class="javax.swing.JTextPane" binding="bottomCardText">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-1120043"/>
+          <font name="OpenDyslexic" size="36"/>
+          <foreground color="-12828863"/>
+        </properties>
+      </component>
+      <component id="a2c8d" class="javax.swing.JTextPane" binding="middleText">
+        <constraints>
+          <grid row="1" column="1" row-span="2" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-1120043"/>
+          <editable value="false"/>
+          <focusCycleRoot value="false"/>
+          <font name="Daniel" size="22"/>
+          <foreground color="-12828863"/>
+          <text value="Gracz 1&#10;&#10;vs.&#10;&#10;Gracz 2"/>
+        </properties>
+      </component>
+      <component id="c5c42" class="javax.swing.JLabel" binding="scorePlayer1">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Daniel" size="22" style="1"/>
+          <foreground color="-16775081"/>
+          <text value="0"/>
+        </properties>
+      </component>
+      <component id="5631f" class="javax.swing.JLabel" binding="scorePlayer2">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Daniel" size="22" style="1"/>
+          <foreground color="-16775081"/>
+          <text value="0"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
