--- a/src/Cards/MainForm.form
+++ b/src/Cards/MainForm.form
@@ -75,7 +75,7 @@
               <text value="Wyjście"/>
             </properties>
           </component>
-          <component id="44a92" class="javax.swing.JLabel">
+          <component id="44a92" class="javax.swing.JLabel" binding="roundIndicator">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -128,7 +128,9 @@
       </component>
       <component id="c5c42" class="javax.swing.JLabel" binding="scorePlayer1">
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="100" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <font name="Daniel" size="22" style="1"/>
@@ -138,7 +140,9 @@
       </component>
       <component id="5631f" class="javax.swing.JLabel" binding="scorePlayer2">
         <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="100" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <font name="Daniel" size="22" style="1"/>
